      you're trying to commit before you send them across the wire. (CNY-616)

  o Client Changes:
    * conary rq now supports --path, which allows you to search for troves in 
      the repository by path. (CNY-74)
    * conary rq now has a --show-removed option that allows you to see removed
      troves.  A [Removed] flag will be displayed when the --trove-flags option
      is added.

Changes in 1.0.26:
  o Protocol changes:
    * Improved acl checks on file contents and file objects (CNY-700)
    * getFileVersions() raises FileStreamMissing when it gets in valid
      request
    * getFileContents() raises FileHasNoContents when contents are
      requested for a file type which has no contents (such as a symlink)
    * The server returns a new exception type, FileStreamsMissing, when
      the client requests file streams w/ getFileVersion(s) (SUP-16)

  o Build Changes:
    * The fix for CNY-684 introduced in Conary 1.0.24, storing src.rpm
      files rather than their contents, worked for local builds but
      not for commits to repositories.  Committing to repositories
      now incorporates this fix. (CNY-684)
    * The mirror:// functionality introduced in Conary 1.0.25 had two
      small bugs, one of which prevented mirror:// pseudo-URLs from
      working.  These bugs are now fixed, thanks to Pavel
      Volkovitskiy. (CNY-704)
    * The "cvc cook" command now announces which label it is building
      at the beginning of the cook, making it easier to catch mistakes
      early. Thanks to Pavel Volkovitskiy for this fix. (CNY-615)
    * When cooking a group, adding "--debug" to the "cvc cook" command
      line now displays detailed information about why a component is
      being included to solve a dependency. (CNY-711)
    * The source actions (addSource, addArchive, etc.) can now take
      a "package=" argument like the build actions do.  Thanks to
      Pavel Volkovitskiy for contributing this capability.  (CNY-665)