@@ -1117,27 +1117,15 @@ followLocalChanges: %s
                 erasePrimaries.add((job[0], job[1], (None, None), False))
             alreadyInstalled.discard((job[0], job[1][0], job[1][1]))
 
+        # items which were updated to redirects should be removed, no matter
+        # what
+        for info in set(itertools.chain(*redirectHack.values())):
+            erasePrimaries.add((info[0], (info[1], info[2]), (None, None), False))
+
 	eraseSet = _findErasures(erasePrimaries, newJob, alreadyInstalled, 
                                  recurse)
         assert(not x for x in newJob if x[2][0] is None)
         newJob.update(eraseSet)
-
-        # items which were updated to redirects should be removed, no matter
-        # what - IF there's no job removing them now, we need to add it now.
-        redirects = {}
-        for info in set(itertools.chain(*redirectHack.values())):
-            redirects.setdefault(info[0], []).append(info)
-
-        for job in newJob:
-            if job[0] in redirects:
-                redirectList = redirects[job[0]]
-                info = (job[0], job[1][0], job[1][1])
-                if info in redirectList:
-                    redirectList.remove(info)
-        for troveList in redirects.itervalues():
-            for info in set(troveList):
-                newJob.add((info[0], (info[1], info[2]), (None, None), False))
-
         return newJob
 
     def _splitPinnedJob(self, uJob, troveSource, job, force=False):
